--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,1 +1,10 @@
+sonar.projectKey=bernardobrezende_teste-sonarcloud
+sonar.projectName=Teste sonar cloud
+sonar.projectVersion=1.0
+
+sonar.sources=src
+sonar.tests=tests
+
 sonar.testExecutionReportPaths=test-report.xml
+
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
